@@ -1,4 +1,7 @@
 0.11.102
+	+ Bugfix: cmp in EBox::Types::HostIP now sorts correctly
+	+ updatedRowNotify in EBox::Model::DataTable receives old row as
+	well as the recently updated row
 	+ Added `override_user_modification` configuration parameter to
 	avoid user modification checkings and override them without asking
 	+ Added EBox::Model::Row to ease the management of data returned
